# obs-rgb-levels-filter

./: CMakeLists.txt  README.md
data/: rgb_levels.effect
src/: rgb-levels-filter.c
